[package]
name = "solana_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.7.0"
solana-sdk = "1.7.0"
solana-transaction-status = "1.7.0"
chrono =  "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
